# Programas_NBV

NBV-net dataset usage/: Manejo dataset clasificacion.ipynb  Manejo dataset regresion.ipynb
forward_DNN/: Forward_DNN_classif.ipynb  class2points_tf.ipynb  dinstance_matrix.ipynb  distance_matrix.npy  octree_DNN.npy  test_DNN_reg.ipynb
forward_DNN/.ipynb_checkpoints/: test_DNN_reg-checkpoint.ipynb
utilidades/: CMakeLists.txt  Test_square_distance.ipynb  cloud_generation.py  delete_files.py  escala_de_nubes.py  histogram_multihist.ipynb  labeling.py  labelling_hdf5.ipynb  labelling_numpy.ipynb  labelling_numpy_regression.ipynb  labelling_sphere2classes.ipynb  min_max_iter.py  octomap_to_file.py  orientacion.py  plot_rot.py  plot_sphere.py  points_in_sphere.py  poses.py  poses2.py  poses_rot.py  posicion_vpl.py  visual_points_sphere.ipynb  visualiza_octomap.py  vpl_test.cpp
utilidades/scripts graficas covertura/: Forward_DNN_classif.ipynb  bottle_eng.eps  cov_surf_f1.eps  cov_surf_f2.eps  cov_surf_f2_mean.eps  cov_surf_f3.eps  cov_surf_f3_mean.eps  dinstance_matrix.ipynb  equiv_class2pose.txt  iron_eng.eps  manual_data2feed2DNN.ipynb  regression2pose.ipynb  surface_coverage_plots.ipynb  telephone_eng.eps  test_nbvnet.py
utilidades/scripts graficas covertura/.ipynb_checkpoints/: dinstance_matrix-checkpoint.ipynb  manual_data2feed2DNN-checkpoint.ipynb  surface_coverage_plots-checkpoint.ipynb
utilidades/vpl_problema/config/: partialModelConfig.ini  partialModelConfig_ori.ini
utilidades/vpl_problema/data/: imagen-1050.xyz  object_accumulated_points.wrl
(+12 files in other folders)
